modificado estilos del navbar

--- a/maqueta/frontend/carlos_paz.html
+++ b/maqueta/frontend/carlos_paz.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet"  href="localidades.css">
     <link rel="stylesheet"  href="reset.css">
+    <link rel="stylesheet"  href="estilos.css">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carlos Paz</title>
@@ -21,56 +23,56 @@
         <div id="portada">
             <h1>Carlos Paz</h1>
         </div>
-        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark " style="background-color: transparent !important;">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="index.html"><img src="imagenes/Logo.png" alt="Logo" style="width:70%; padding-left:2,1em;"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown" >
-                <ul class="navbar-nav ms-auto" >
-                  <li class="nav-item ">
-                    <a class="nav-link active " aria-current="page" href="index.html" >Inicio</a>
-                  </li>
-                  <li class="nav-item dropdown ">
-                    <a class="nav-link dropdown-toggle "  href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                     Areas turisticas
-                    </a>
-                    <ul class="dropdown-menu" style="background-color: transparent !important;">
-                      <li><a class="dropdown-item" href="Valle_de_traslasierras.html" style="color: white; ">Valle de Traslasierras</a></li>
-                      <li><a class="dropdown-item" href="valle_de_punilla.html" style="color: white;">Valle de Punilla</a></li>
-                      <li><a class="dropdown-item" href="valle_de_calamuchita.html" style="color: white;">Valle de Calamuchita</a></li>
-                      <li><a class="dropdown-item" href="valle_de_paravachasca.html" style="color: white;">Valle de Paravachasca</a></li>
-                      <li><a class="dropdown-item" href="norte_y_noroeste.html" style="color: white;">Norte y Noroeste</a></li>
-                      <li><a class="dropdown-item" href="sierras_chicas.html" style="color: white;">Sierras Chicas</a></li>
-                      <li><a class="dropdown-item" href="cordoba_capital.html" style="color: white;">Cordoba Capital</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                     Actividades turisticas
-                    </a>
-                    <ul class="dropdown-menu" style="background-color: transparent !important;">
-                      <li><a class="dropdown-item" href="parques_nacionales.html" style="color: white;">Parques Nacionales</a></li>
-                      <li><a class="dropdown-item" href="astroturismo.html" style="color: white;">Astroturismo</a></li>
-                      <li><a class="dropdown-item" href="soon/index.html" style="color: white;">Turismo Aventura</a></li>
-                    <li><a class="dropdown-item" href="soon/index.html" style="color: white;">Camino del Vino</a></li>
-                    <li><a class="dropdown-item" href="soon/index.html" style="color: white;">Turismo Religioso</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="sobre_nosotros.html">Sobre nosotros</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="login.html">Log In</a>
-                  </li>                 
-                  <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contacto</a>
-                  </li>
-                </ul>
-              </div>
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="index.html"><img src="imagenes/Logo.png" alt="Logo" class="logo"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown" >
+              <ul class="navbar-nav ms-auto" >
+                <li class="nav-item ">
+                  <a class="nav-link active " aria-current="page" href="index.html" >Inicio</a>
+                </li>
+                <li class="nav-item dropdown ">
+                  <a class="nav-link dropdown-toggle "  href="areas_turisticas.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                   Areas turisticas
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="Valle_de_traslasierras.html">Valle de Traslasierras</a></li>
+                    <li><a class="dropdown-item" href="valle_de_punilla.html">Valle de Punilla</a></li>
+                    <li><a class="dropdown-item" href="valle_de_calamuchita.html">Valle de Calamuchita</a></li>
+                    <li><a class="dropdown-item" href="valle_de_paravachasca.html">Valle de Paravachasca</a></li>
+                    <li><a class="dropdown-item" href="norte_y_noroeste.html">Norte y Noroeste</a></li>
+                    <li><a class="dropdown-item" href="sierras_chicas.html">Sierras Chicas</a></li>
+                    <li><a class="dropdown-item" href="cordoba_capital.html">Cordoba Capital</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                   Actividades turisticas
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="parques_nacionales.html">Parques Nacionales</a></li>
+                    <li><a class="dropdown-item" href="astroturismo.html">Astroturismo</a></li>
+                    <li><a class="dropdown-item" href="soon/index.html">Turismo Aventura</a></li>
+                    <li><a class="dropdown-item" href="soon/index.html">Camino del Vino</a></li>
+                    <li><a class="dropdown-item" href="soon/index.html">Turismo Religioso</a></li>
+                  </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="sobre_nosotros.html">Sobre nosotros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="login.html">Log In</a>
+                </li>                 
+                <li class="nav-item">
+                  <a class="nav-link" href="contacto.html">Contacto</a>
+                </li>
+              </ul>
             </div>
-          </nav>
+          </div>
+        </nav>
     </header>
 <main>
 
