--- a/maqueta/frontend/valle_de_paravachasca.html
+++ b/maqueta/frontend/valle_de_paravachasca.html
@@ -11,6 +11,7 @@
     <link rel = "preconnect" href = "https://fonts.gstatic.com">
 		<link href = "https://fonts.googleapis.com/css2? family = Squada + One & display = swap" rel = "stylesheet">
 	  
+		<link rel="stylesheet"  href="estilos.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
@@ -20,9 +21,9 @@
         <div id="portada">
             <h1> Valle de Paravachasca</h1>
         </div>
-        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark" style="height: 50px;">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
           <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="imagenes/Logo.png" alt="Logo" style="width:50%; padding-left:2em;"></a>
+            <a class="navbar-brand" href="index.html"><img src="imagenes/Logo.png" alt="Logo" class="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -35,26 +36,26 @@
                   <a class="nav-link dropdown-toggle "  href="areas_turisticas.html" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                    Areas turisticas
                   </a>
-                  <ul class="dropdown-menu" style="background-color: transparent !important;">
-                    <li><a class="dropdown-item" href="Valle_de_traslasierras.html" style="color: white; ">Valle de Traslasierras</a></li>
-                    <li><a class="dropdown-item" href="valle_de_punilla.html" style="color: white;">Valle de Punilla</a></li>
-                    <li><a class="dropdown-item" href="valle_de_calamuchita.html" style="color: white;">Valle de Calamuchita</a></li>
-                    <li><a class="dropdown-item" href="valle_de_paravachasca.html" style="color: white;">Valle de Paravachasca</a></li>
-                    <li><a class="dropdown-item" href="norte_y_noroeste.html" style="color: white;">Norte y Noroeste</a></li>
-                    <li><a class="dropdown-item" href="sierras_chicas.html" style="color: white;">Sierras Chicas</a></li>
-                    <li><a class="dropdown-item" href="cordoba_capital.html" style="color: white;">Cordoba Capital</a></li>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="Valle_de_traslasierras.html">Valle de Traslasierras</a></li>
+                    <li><a class="dropdown-item" href="valle_de_punilla.html">Valle de Punilla</a></li>
+                    <li><a class="dropdown-item" href="valle_de_calamuchita.html">Valle de Calamuchita</a></li>
+                    <li><a class="dropdown-item" href="valle_de_paravachasca.html">Valle de Paravachasca</a></li>
+                    <li><a class="dropdown-item" href="norte_y_noroeste.html">Norte y Noroeste</a></li>
+                    <li><a class="dropdown-item" href="sierras_chicas.html">Sierras Chicas</a></li>
+                    <li><a class="dropdown-item" href="cordoba_capital.html">Cordoba Capital</a></li>
                   </ul>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                    Actividades turisticas
                   </a>
-                  <ul class="dropdown-menu" style="background-color: transparent !important;">
-                    <li><a class="dropdown-item" href="parques_nacionales.html" style="color: white;">Parques Nacionales</a></li>
-                    <li><a class="dropdown-item" href="astroturismo.html" style="color: white;">Astroturismo</a></li>
-                    <li><a class="dropdown-item" href="soon/index.html" style="color: white;">Turismo Aventura</a></li>
-                    <li><a class="dropdown-item" href="soon/index.html" style="color: white;">Camino del Vino</a></li>
-                    <li><a class="dropdown-item" href="soon/index.html" style="color: white;">Turismo Religioso</a></li>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="parques_nacionales.html">Parques Nacionales</a></li>
+                    <li><a class="dropdown-item" href="astroturismo.html">Astroturismo</a></li>
+                    <li><a class="dropdown-item" href="soon/index.html">Turismo Aventura</a></li>
+                    <li><a class="dropdown-item" href="soon/index.html">Camino del Vino</a></li>
+                    <li><a class="dropdown-item" href="soon/index.html">Turismo Religioso</a></li>
                   </ul>
                 </li>
                 <li class="nav-item">
