Component Parques Listo

--- a/maqueta/frontend/parques_nacionales.html
+++ b/maqueta/frontend/parques_nacionales.html
@@ -17,7 +17,7 @@
 
 </head>
 <body id="cuerpo">
-    <header style="background-image: url(imagenes/DSC03704.jpg)">
+    <header style="background-image: url(../../../assets/img/DSC03704.jpg)">
         
         <div id="portada">
             <h1>Parque Nacionales</h1>
